@@ -151,7 +151,6 @@
                         <configuration>
                             <stopKey>foo</stopKey>
                             <stopPort>8079</stopPort>
-                            <contextPath>/</contextPath>
                         </configuration>
                     </plugin>
                 </plugins>
