@@ -148,6 +148,7 @@ Change log next version
                 statusCode(200).
                 body("key", equalTo("value"))
     }
+  This is also support for the spring-mock-mvc module.
 
 Change log 2.5.0 (2015-08-09)
 -----------------------------
